projects/blog/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f-x-blog-nginx
  labels:
    project: f-x-blog
    service: f-x-blog-nginx
spec:
  selector:
    service: f-x-blog-nginx
  ports:
    - port: 80
      name: http
      targetPort: http
