projects/blog/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f-x-blog
  labels:
    project: f-x-blog
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - f-x.dev
      secretName: letsencrypt-prod
  rules:
    - host: f-x.dev
      http:
        paths:
          - path: /api/?(.*)
            pathType: Exact
            backend:
              service:
                name: f-x-blog-server
                port:
                  name: http
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: f-x-blog-nginx
                port:
                  name: http
